added 3 images to survey

--- a/survey.html
+++ b/survey.html
@@ -36,5 +36,11 @@
             </p>
         </form>
     </section>
+     <section>
+        <h2>Images</h2>
+        <img src="superbad.jpg" alt="mclovin">
+        <img src="avengers1.jpg" alt="avengers">
+        <img src="exorcist1.jpeg" alt="Exorcist">
+    </section>
 </body>
 </html>
