--- a/survey.html
+++ b/survey.html
@@ -37,7 +37,7 @@
         </form>
     </section>
      <section>
-        <h2>Images</h2>
+        <h2>Posters</h2>
         <img src="superbad.jpg" alt="mclovin">
         <img src="avengers1.jpg" alt="avengers">
         <img src="exorcist1.jpeg" alt="Exorcist">
