Added Youtube link to survey

--- a/survey.html
+++ b/survey.html
@@ -8,7 +8,11 @@
     <header>
         <h1>Favorite Movie Genre Survey</h1>
     </header>
-    
+    <section>
+      <h2>Movie I like</h2>
+      <iframe width="420" height="315"
+src="https://youtu.be/C0BMx-qxsP4?si=nDd-doIWRV9Uincl">
+</iframe>
     <section>
         <h2>Survey Questions</h2>
         <form>
