--- a/awesomewords.html
+++ b/awesomewords.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Awesome Words</title>
+</head>
+<body>
+    <header>
+        <h1>Awesome Words</h1>
+    </header>
+    
+    <div class="container">
+        <section>
+            <h2>These are words I think are really cool for varying reasons</h2>
+            <p>Most of these words do not come up often in everyday conversation and I find many to be goofy. I have different reasons for liking these words but most of the time its because they are so unique and uncommon to see. I cannot list all of the words I find awesome because there are too many, hopefully you enjoy this abbreviated list.</p>
+        </section>
+        
+        <section>
+            <h2>My Abbreviated List of Awesome Words</h2>
+            <ul>
+                <li>Hornswoggle</li>
+                <li>Conundrum</li>
+                <li>Indomitable</li>
+                <li>Kaleidoscope</li>
+                <li>Apex</li>
+                <li>Paradigm</li>
+                <li>Whimsical</li>
+                <li>Bamboozled</li>
+                <li>Hodgepodge</li>
+                <li>Scalawag</li>
+            </ul>
+        </section>
+    </div>
+</body>
+</html>
 
