Added link to get to awesome words page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Brendan Dwyer</h1>
         <p>Contact Information: 123 Adams Street, Darien, IL, 630-674-7933, bdwyer@hawk.iit.edu</p>
          <a href="survey.html">Take Survey</a>
+         <a href="awesomewords.html">Words I think are Awesome</a> 
     </header>
     
     <section>
