Added links to all pages

--- a/survey.html
+++ b/survey.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>
+         <a href="index.html">Go back</a>
+         <a href="awesomewords.html">Words I think are Awesome</a> 
     <title>Movie Genre Survey</title>
 </head>
 <body>
