--- a/awesomewords.html
+++ b/awesomewords.html
@@ -3,6 +3,8 @@
 <meta charset="UTF-8">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="index.html">Go back</a>
+    <a href="survey.html">Take Survey</a>
     <title>Awesome Words</title>
 </head>
 <body>
