--- a/survey.html
+++ b/survey.html
@@ -13,7 +13,7 @@
     <section>
       <h2>Movie I like</h2>
       <iframe width="420" height="315"
-src="https://youtu.be/C0BMx-qxsP4?si=nDd-doIWRV9Uincl">
+src="https://youtu.be/embed/C0BMx-qxsP4?si=nDd-doIWRV9Uincl">
 </iframe>
     <section>
         <h2>Survey Questions</h2>
