--- a/awesomewords.html
+++ b/awesomewords.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="index.html">Go back</a>
-    <a href="survey.html">Take Survey</a>
     <title>Awesome Words</title>
 </head>
 <body>
@@ -15,7 +13,7 @@
     <div class="container">
         <section>
             <h2>These are words I think are really cool for varying reasons</h2>
-            <p>Most of these words do not come up often in everyday conversation and I find many to be goofy. I have different reasons for liking these words but most of the time its because they are so unique and uncommon to see. I cannot list all of the words I find awesome because there are too many, hopefully you enjoy this abbreviated list.</p>
+            <p>Most of these words do not come up often in everyday conversation, and I find many to be goofy. I have different reasons for liking these words, but most of the time it's because they are so unique and uncommon to see. I cannot list all of the words I find awesome because there are too many; hopefully, you enjoy this abbreviated list.</p>
         </section>
         
         <section>
@@ -36,4 +34,5 @@
     </div>
 </body>
 </html>
+
 
