--- a/survey.html
+++ b/survey.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 <head>
-         <a href="index.html">Go back</a>
-         <a href="awesomewords.html">Words I think are Awesome</a> 
+    <meta charset="UTF-8">
     <title>Movie Genre Survey</title>
 </head>
 <body>
+    <a href="index.html">Go back</a>
+    <a href="awesomewords.html">Words I think are Awesome</a>
     <header>
         <h1>Favorite Movie Genre Survey</h1>
     </header>
     <section>
-      <h2>Movie I like</h2>
-      <iframe width="420" height="315"
-src="https://youtu.be/embed/C0BMx-qxsP4?si=nDd-doIWRV9Uincl">
-</iframe>
+        <h2>Movie I like</h2>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/C0BMx-qxsP4?si=nDd-doIWRV9Uincl"></iframe>
+    </section>
     <section>
         <h2>Survey Questions</h2>
         <form>
@@ -23,14 +22,7 @@ src="https://youtu.be/embed/C0BMx-qxsP4?si=nDd-doIWRV9Uincl">
                 <select id="favoriteGenre" name="favoriteGenre">
                     <option value="Action">Action</option>
                     <option value="Comedy">Comedy</option>
-                    <option value="Drama">Drama</option>
-                    <option value="Science Fiction">Science Fiction</option>
-                    <option value="Horror">Horror</option>
-                    <option value="Adventure">Adventure</option>
-                    <option value="Romance">Romance</option>
-                    <option value="Fantasy">Fantasy</option>
-                    <option value="Mystery">Mystery</option>
-                    <option value="Other">Other</option>
+                    <!-- Add other options here -->
                 </select>
             </p>
             <p>
@@ -42,7 +34,7 @@ src="https://youtu.be/embed/C0BMx-qxsP4?si=nDd-doIWRV9Uincl">
             </p>
         </form>
     </section>
-     <section>
+    <section>
         <h2>Posters</h2>
         <img src="superbad.jpg" alt="mclovin">
         <img src="avengers1.jpg" alt="avengers">
