--- a/survey.html
+++ b/survey.html
@@ -22,7 +22,9 @@
                 <select id="favoriteGenre" name="favoriteGenre">
                     <option value="Action">Action</option>
                     <option value="Comedy">Comedy</option>
-                    <!-- Add other options here -->
+                    <option value="Horror">Horror</option>
+                    <option value="Romance">Romance</option>
+                    <option value="Other">Other</option>
                 </select>
             </p>
             <p>
