Changed wording for my awesome words page

--- a/awesomewords.html
+++ b/awesomewords.html
@@ -13,7 +13,7 @@
     <div class="container">
         <section>
             <h2>These are words I think are really cool for varying reasons</h2>
-            <p>Most of these words do not come up often in everyday conversation, and I find many to be goofy. I have different reasons for liking these words, but most of the time it's because they are so unique and uncommon to see. I cannot list all of the words I find awesome because there are too many; hopefully, you enjoy this abbreviated list.</p>
+            <p>Most of these words do not come up often in everyday conversation so I find them very interesting. I have different reasons for liking these words, I enjoy most of them because they are so unique and uncommon to see. I cannot list all of the words I find awesome since there are too many; hopefully, you enjoy this abbreviated list.</p>
         </section>
         
         <section>
