Added links and changed formatting

--- a/awesomewords.html
+++ b/awesomewords.html
@@ -6,6 +6,8 @@
     <title>Awesome Words</title>
 </head>
 <body>
+ <a href="index.html">Go back</a>
+ <a href="survey.html">Take Survey</a>
     <header>
         <h1>Awesome Words</h1>
     </header>
