--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <section>
         <h2>Objective</h2>
-        <p>Interested in positions dealing with IT. I am a hard working team player who is a great addition to any IT team. I do well working in groups and always try to work for the better of the group.</p>
+        <p>I am interested in positions dealing with IT. I am a hard working team player who is a great addition to any IT team. I do well working in groups and would be a good addition to any team.</p>
     </section>
     
     <section>
