--- a/awesomewords.html
+++ b/awesomewords.html
@@ -6,8 +6,8 @@
     <title>Awesome Words</title>
 </head>
 <body>
- <a href="index.html">Go back</a>
- <a href="survey.html">Take Survey</a>
+    <a href="index.html">Go back</a>
+    <a href="survey.html">Take Survey</a>
     <header>
         <h1>Awesome Words</h1>
     </header>
@@ -33,8 +33,21 @@
                 <li>Scalawag</li>
             </ul>
         </section>
+
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>Database Administration</li>
+                <li>HTML and Markup</li>
+                <li>Networking</li>
+            </ul>
+        </section>
+    
+        <section>
+            <h2>References</h2>
+            <p>Available upon request</p>
+        </section>
     </div>
 </body>
 </html>
-
 
