Made image alts more descriptive

--- a/survey.html
+++ b/survey.html
@@ -46,9 +46,9 @@
   
   <section>
     <h2>Posters</h2>
-    <img src="images/superbad.jpg" alt="mclovin">
-    <img src="images/avengers1.jpg" alt="avengers">
-    <img src="images/exorcist1.jpeg" alt="Exorcist">
+    <img src="images/superbad.jpg" alt="Poster of Superbad">
+    <img src="images/avengers1.jpg" alt="Poster of the Avengers">
+    <img src="images/exorcist1.jpeg" alt="Poster of the Exorcist">
   </section>
 </body>
 </html>
